kubernetes/apps/random-gif/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: random-gif
  labels:
    pod-security.kubernetes.io/enforce: restricted
