kubernetes/apps/random-gif/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-tls
  namespace: random-gif
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kube-system
  to:
    - group: ""
      kind: Secret
      name: random-gif-tls
