kubernetes/apps/random-gif/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: random-gif
  namespace: random-gif
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-internal-wildcard
  hostnames:
    - random-gif.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: random-gif
          port: 8080
